# Blood-Donation-Platform

./: Makefile  Makefile.am  Makefile.in  README.md  capteur.txt  config.h  config.status  configure  configure.in  don.txt  ficheDonneur.txt  fichierets.txt  fichierrdv.txt  log.txt  projet-finale.glade  projet-finale.glade.bak  projet-finale.gladep.bak  rayen.txt
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  don1.c  don1.h  ficheDonneur.c  ficheDonneur.h  gestionEts.c  gestionEts.h  interface.c  interface.c.bak  interface.h.bak  main.c  projet-finale  user.c  user.h  ut.c  ut.h  utilisateur.c  utilisateur.h
src/.deps/: callbacks.Po  don1.Po  ficheDonneur.Po  gestionEts.Po  user.Po  ut.Po  utilisateur.Po
